# ceasium

./: README.md  packages_checker.py  pyproject.toml
.github/workflows/: build.yml
ceasium/: ceasium_build.py  ceasium_build_dll.py  ceasium_build_exe.py  ceasium_build_o.py  ceasium_config.py  ceasium_run.py  constants.py  cs.py  cs_c_flags.py  cs_change_dir.py  cs_changed.py  cs_compile.py  cs_ld_flags.py  cs_rm.py  main.py  packages.json
ceasium2/: build.json  main.py  mainl.py  validate.py  validate2.py
src/: main.c
