[tool.poetry]
name = "ceasium"
version = "0.15.0"
description = "A hassle free C (gcc) JSON build system."
readme = "README.md"
authors = ["Evaldas Zmitra <evaldaszmit@gmail.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.6"
pkgconfig = "^1.5.5"

[tool.poetry.scripts]
cs-c-flags = "ceasium.cs_c_flags:main"
cs-changed = "ceasium.cs_changed:main"
cs-change-dir = "ceasium.cs_change_dir:main"
cs-compile = "ceasium.cs_compile:main"
cs-ld-flags = "ceasium.cs_ld_flags:main"
cs-rm = "ceasium.cs_rm:main"
cs = "ceasium.cs:main"